[gd_scene load_steps=8 format=2]

[ext_resource path="res://kendall_jenner/1439477217.webp" type="Texture" id=1]
[ext_resource path="res://SquangoSeeker.gd" type="Script" id=2]
[ext_resource path="res://Kendall_Jenner.gd" type="Script" id=3]
[ext_resource path="res://AttackDetector.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 55 )

[sub_resource type="CircleShape2D" id=2]
radius = 292.582

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.14434, 24.353 )

[node name="Kendall_Jenner" type="KinematicBody2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( -0.0440378, 0.0641843 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SquangoSeeker" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SquangoSeeker"]
scale = Vector2( 0.772291, -0.316073 )
shape = SubResource( 2 )

[node name="AttackDetector" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -62.2454, -0.115753 )
scale = Vector2( 1.75091, 2.2537 )
shape = SubResource( 3 )

[connection signal="body_entered" from="SquangoSeeker" to="." method="_on_SquangoSeeker_body_entered"]
[connection signal="body_exited" from="SquangoSeeker" to="." method="_on_SquangoSeeker_body_exited"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
